sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:8: error: ';' expected but '{' found.
  }  while (i+ecart<n){
                      ^