sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var n:Int=getNombreValeurs
  var ecart:Int=n
  var i:Int=0
  do { if (ecart>1) 
    ecart = (ecart.toDouble/1.3).toInt
  }  while (i+ecart<n){

    if (!plusPetit(i,i+ecart)){
      echange(i,i+ecart)
    }
    i=i+1
  }
}